@@ -70,7 +70,7 @@ $HTMLOUT .= "
 //==09 Birthday mod
 $year .= '<select name="year" class="w-25 right10 bottom10">';
 $year .= "<option value='0000'>{$lang['signup_year']}</option>";
-$i = '2030';
+$i = date("Y");
 while ($i >= 1920) {
     $year .= '<option value="' . $i . '">' . $i . '</option>';
     --$i;
