@@ -4,10 +4,11 @@ require_once INCL_DIR . 'user_functions.php';
 require_once INCL_DIR . 'password_functions.php';
 require_once INCL_DIR . 'function_bemail.php';
 dbconn();
-global $CURUSER, $site_config;
+global $CURUSER, $site_config, $mc1;
 if (!$CURUSER) {
     get_template();
 }
+$mc1->delete_value('userlist_' . $site_config['chatBotID']);
 $lang = array_merge(load_language('global'), load_language('takesignup'));
 $ip = getip();
 $res = sql_query('SELECT COUNT(id) FROM users') or sqlerr(__FILE__, __LINE__);
@@ -147,7 +148,7 @@ $new_user = sql_query('INSERT INTO users (username, passhash, torrent_pass, pass
         $ip,
     ])) . ')');
 $id = 0;
-while ($id === 0) {
+while ($id == 0) {
     usleep(500);
     $id = get_one_row('users', 'id', 'WHERE username = ' . sqlesc($wantusername));
 }
@@ -186,7 +187,7 @@ $mc1->cache_value('latestuser', $latestuser_cache, 0, $site_config['expires']['l
 $mc1->delete_value('birthdayusers');
 $mc1->delete_value('chat_users_list');
 write_log('User account ' . htmlsafechars($wantusername) . ' was created!');
-if ($site_config['autoshout_on'] == 1) {
+if ($id > 2 && $site_config['autoshout_on'] == 1) {
     autoshout($msg);
 }
 stderr('Success', 'Signup successfull, Your inviter needs to confirm your account now before you can use your account!');
